# janis-assistant

./: .gitignore  .travis.yml  README.md  main.py  notes.txt  pyproject.toml  pyproject_working.toml  requirements.md  requirements.txt  setup.py  temp.txt
.github/workflows/: publish.yml  unit_tests.yml
configs/: nextflow.config.BwaAlignment  nextflow.config.BwaAlignmentAndQC  nextflow.config.wgsgermline  nextflow.config.wgsgermline.server
engines/: engine.py
engines/cromwell/: api.py  configurations.py  main.py  types.py
janis_assistant/: __init__.py  __meta__.py  cli.py  main.py
janis_assistant/containers/: __init__.py  base.py  docker.py  singularity.py
janis_assistant/data/: dbproviderbase.py  keyvaluedbproviderbase.py
janis_assistant/data/container/: __init__.py  info.py  parse_pattern.py  registries.py
janis_assistant/data/enums/: __init__.py  dbtype.py  taskinfo.py  taskprogress.py  taskstatus.py  workflowmetadatakeys.py
janis_assistant/engines/: __init__.py  engine.py  enginetypes.py
janis_assistant/environments/: environment.py
janis_assistant/examples/: compressedvcf.py  optionalglobfile.py  optionaloutputs.py  scatterlabels.py  scattertest.py  scratch.py
janis_assistant/management/: README.md  __init__.py  configmanager.py  configuration.py  envvariables.py  filescheme.py  mysql.py  notificationmanager.py  workflowdbmanager.py  workflowmanager.py  workflowpreparer.py
janis_assistant/modifiers/: base.py  batchmodifier.py  contigchecker.py  cwlinputobjectunwrappermodifier.py  filefinder.py  inputchecker.py  inputqualifier.py  inputtransformermodifier.py  remotefilemodifier.py  validatormodifier.py
janis_assistant/templates/: __init__.py  base.py  local.py  pawsey.py  pbs.py  petermac.py  petermacdisconnected.py  slurm.py  spartan.py  templates.py  wehi.py
janis_assistant/test_tools_framework/: test_definitions.py  test_tools_unit_tests.py  unit_test_base_class.py
janis_assistant/tests/: test_ansi_escape_colors.py  test_batchmodifier.py  test_configmanager.py  test_configuration.py  test_containers.py  test_conversions.py  test_cromwellmetadata.py  test_databasemanager.py  test_fileschemes.py  test_get_workflow_from_file.py  test_ingest.py  test_ingest_units.py  test_output_evaluation.py  test_status.py  test_templates.py  test_translate.py  test_translation_units.py  test_utils.py  testvarious.py
janis_assistant/utils/: __init__.py  batchrun.py  callprogram.py  dateutils.py  fileutil.py  getuser.py  inputshelper.py  pathhelper.py  processlogger.py  typeguesser.py  urwidhelp.py
janis_assistant/validation/: __init__.py
janis_runner/: __init__.py  __meta__.py  cli.py  main.py
janis_runner/containers/: README.md  docker.py  singularity.py
janis_runner/data/: dbproviderbase.py  keyvaluedbproviderbase.py
janis_runner/engines/: __init__.py  engine.py  enginetypes.py
janis_runner/engines/toil/: main.py
janis_runner/environments/: environment.py
janis_runner/examples/: scratch.py
janis_runner/management/: __init__.py  configmanager.py  configuration.py  mysql.py  notificationmanager.py  taskmanager.py  workflowdbmanager.py  workflowmanager.py
janis_runner/templates/: __init__.py  base.py  local.py  petermac.py  petermacdisconnected.py  petermactest.py  slurm.py  spartan.py  templates.py
janis_runner/tests/: test_configmanager.py  test_cromwellmetadata.py  test_databasemanager.py  test_fileschemes.py  test_get_workflow_from_file.py  test_imports.py  test_templates.py  test_toil.py  test_utils.py  testvarious.py
janis_runner/utils/: __init__.py  dateutil.py  getuser.py  logger.py  pathhelper.py  processlogger.py
janis_runner/validation/: __init__.py
nextflow/: config  main.nf
nextflow/modules/: assign_genes.nf  make_gff.nf  sort_bed.nf
resources/: classes_janis_assistant.dot  containerregistry.dot  dbmodels.dot  engines.dot  filescheme.dot  janisconfiguration.dot  managedcontainer.dot  pipelinemodifiers.dot  templates.dot
runner/: __main__.py  setup.py
runner/engines/: engine.py
runner/runner/: cli.py
runner/utils/: __init__.py  processlogger.py
scripts/databasegenerator/: README.md  deletedatabasecredentials.py  generatedatabasecredentials.py
shepherd/: __init__.py  cli.py  main.py
shepherd/data/: __init__.py  dbmanager.py  dbproviderbase.py  filescheme.py  keyvaluedbproviderbase.py  schema.py  taskmanager.py
shepherd/engines/: __init__.py  engine.py
shepherd/environments/: environment.py
shepherd/examples/: scratch.py
shepherd/management/: __init__.py  configmanager.py  enums.py  taskmanager.py
shepherd/tests/: test_configmanager.py  test_cromwellmetadata.py  test_databasemanager.py  test_fileschemes.py  test_get_workflow_from_file.py  test_utils.py  testfromjanis.py  testvarious.py
shepherd/utils/: __init__.py  dateutil.py  fromjanis.py  logger.py  pathhelper.py  processlogger.py
shepherd/validation/: __init__.py
unittesting/: testfromjanis.py  testworkflow.py
utils/: logger.py
(+93 files in other folders)
