
[build-system]
build-backend   = "setuptools.build_meta"
requires        = ["setuptools>=67.8.0", "wheel>=0.40.0"]

[project]
name            = "janis-pipelines.assistant"
version         = "v0.13.0"
description     = "Easier way to run workflows, configurable across environments"
readme          = "README.md"
license         = { file = "LICENSE" }
keywords        = [
    "janis", 
    "workflows", 
    "assistant", 
]

authors = [
    { name = "Michael Franklin", email = "michael.franklin@petermac.org" },
    { name = "Grace Hall", email = "grace.hall1@unimelb.edu.au" },
    { name = "Richard Lupat", email = "Richard.Lupat@petermac.org" },
    { name = "Evan Thomas", email = "thomas.e@wehi.edu.au" },
    { name = "Mohammad Bhuyan", email = "bhuyan.m@wehi.edu.au" },
]
maintainers = [
    { name = "Grace Hall", email = "grace.hall1@unimelb.edu.au" },
    { name = "Richard Lupat", email = "Richard.Lupat@petermac.org" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License version 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "janis-pipelines.core @ git+https://github.com/GraceAHall/janis-core@release-v0.13.0",
    "janis-pipelines.bioinformatics @ git+https://github.com/PMCC-BioinformaticsCore/janis-bioinformatics",
    "janis-pipelines.unix @ git+https://github.com/PMCC-BioinformaticsCore/janis-unix",
    "janis-pipelines.templates >= 0.11.0",
    "ruamel.yaml >= 0.12.4, <= 0.16.5",
    "progressbar2",
    "path",
    "black",
    "pre-commit",
    "requests",
    "python-dateutil",
    "tabulate",
    "cwltool",
    "cwl-utils==0.15",
    "blessed",
    "regex",
]
requires-python = ">=3.11"

[project.optional-dependencies]
gcs = ["google-cloud-storage"]
ci = [
    "codecov",
    "coverage",
    "requests_mock",
    "nose_parameterized",
    "keyring==21.4.0",
    "setuptools",
    "wheel",
    "twine",
]

[project.urls]
repository      = "https://github.com/PMCC-BioinformaticsCore/janis-assistant"
documentation   = "https://janis.readthedocs.io/en/latest/"

[tool.setuptools.packages.find]
where = ["./"]
include = ["janis_assistant*"]
namespaces = false

[project.scripts]
janis = "janis_assistant.cli:process_args"

# NOTE
# The following line was not copied across from old setup.py (unknown purpose)
# entry_points={"janis.extension": ["assistant=janis_assistant"]}
